crates/analyzer/tests/snapshots/errors__invalid_var_declaration_1.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: invalid declaration
  ┌─ compile_errors/invalid_var_declaration_1.fe:3:13
  │
3 │         let (x,): Array<u256, 20> = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 2, 1, 3, 4, 5, 6, 7, 8, 9, 0]
  │             ^^^^
  │
  = Tuple declaration targets need to be declared with the tuple type but here the type is Array<u256, 20>


